--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  shared_preferences: ^2.2.3
   flutter_fortune_wheel: ^1.3.0
-  url_launcher: ^6.3.1
-
+  app_tracking_transparency: ^2.0.6+1
+  firebase_core: ^4.2.0
+  firebase_messaging: ^16.0.3
+  flutter_local_notifications: ^19.5.0
+  appsflyer_sdk: ^6.17.5
+  shared_preferences: ^2.5.3
+  webview_flutter_wkwebview: ^3.23.1
+  url_launcher: ^6.3.2
+  external_app_launcher: ^4.0.3
 dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
